syntax = "proto3";
option java_package = "cn.edu.nju.pasalab.graph.kvstore";
option java_multiple_files = true;

message Query {
  int64 requestor = 1;
  int64 key = 2;
}

message Reply {
  int64 requestor = 1;
  int64 key = 2;
  bytes value = 3;
}

message Put {
  int64 key = 1;
  bytes value = 2;
}

message Empty {
}

message BinQuery {
  bytes key = 1;
  int64 requestor = 2;
}

message BinReply {
  bytes key = 1;
  bytes value = 2;
  int64 requestor = 3;
}

 message BinPut {
  bytes key = 1;
  bytes value = 2;
 }


service KVStoreServer {
  rpc streamPut(stream Put) returns (stream Empty) {}
  rpc streamBinPut(stream BinPut) returns (stream Empty) {}
  rpc streamGet(stream Query) returns (stream Reply) {}
  rpc streamBinGet(stream BinQuery) returns (stream BinReply) {}
  rpc get(Query) returns (Reply) {}
  rpc binGet(BinQuery) returns (BinReply) {}
  rpc clear(Empty) returns(Empty) {}
}
